--- a/module/assets/css/backend.css
+++ b/module/assets/css/backend.css
@@ -8,11 +8,12 @@
 
 .workflow_state.row {
     clear: both;
+    max-width: 600px;
 }
 
 .workflow_state.row div {
     float: left;
     padding: 4px;
-    width: 20%;
+    width: 16.5%;
     box-sizing: border-box;
 }
