--- a/src/Bundle/Resources/public/css/backend.css
+++ b/src/Bundle/Resources/public/css/backend.css
@@ -25,3 +25,33 @@
     width: 16.5%;
     box-sizing: border-box;
 }
+
+.workflow-section {
+    border-top: 1px solid #e6e6e8;
+    margin-bottom: 2em;
+}
+
+.workflow-content-box {
+    margin: 20px 15px 16px;
+}
+
+.workflow-history {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.workflow-history th {
+    padding: 6px;
+    background: #f9f9fb;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+}
+
+.workflow-history-state td {
+    padding: 6px;
+    border-bottom: 1px solid #e9e9e9;
+}
+
+.workflow-submit-container {
+    padding: 8px 15px;
+}
