--- a/src/Resources/views/backend/step.html.twig
+++ b/src/Resources/views/backend/step.html.twig
@@ -1,78 +1,22 @@
-{% extends "@ContaoCore/Backend/be_page.html.twig" %}
+{% extends "@NetzmachtContaoWorkflow/backend/backend.html.twig" %}
 
 {% block headline %}
-    {{ headline|raw }}
+{% include sections.template('headline') with sections.get('headline') only %}
 {% endblock %}
 
-{% block error %}
-{% if errors %}
-    {% for error in errors %}
-        {{ error }}<br>
-    {% endfor %}
-{% endif %}
-{% endblock %}
+{%- block error -%}
+
+{%- endblock -%}
 
 {% block main %}
-<div id="tl_buttons">
-    <a href="javascript:history.back();" class="header_back" title="">Zurück</a>
-</div>
-
-<div class="workflow-section">
-    <h2 class="sub_headline">{{ subheadline }}</h2>
-
-    <div class="workflow-content-box">
-        <div class="tl_header hover-div">
-            <table class="tl_header_table">
-                <tbody>
-                <tr>
-                    <td><span class="tl_label">{{ 'workflow.workflowName'|trans }}</span></td>
-                    <td>{{ workflow.label }}</td>
-                </tr>
-                <tr>
-                    <td><span class="tl_label">{{ 'workflow.currentStep'|trans }}</span></td>
-                    <td>{{ currentStep != null ? currentStep.label : '-' }}</td>
-                </tr>
-                {% if item.latestState %}
-                <tr>
-                    <td><span class="tl_label">{{ 'workflow.reachedAt'|trans }}</span></td>
-                    <td>{{ item.latestState.reachedAt.format('d.m.Y H:i') }}</td>
-                </tr>
-                {% endif %}
-                </tbody>
-            </table>
-        </div>
+    <div id="tl_buttons">
+        <a href="javascript:history.back();" class="header_back" title="">Zurück</a>
     </div>
 
-
-    <div class="workflow-submit-container">
-        {% for transition in transitions %}
-            {% set params = {entityId: item.entityId, transition: transition.name } %}
-            {% if hasWorkflowChanged %}
-                {% set params = params|merge({'detach': true}) %}
-            {% endif %}
-            <a href="{{ path('netzmacht.contao_workflow.backend.transition', params) }}" class="tl_submit">
-                {% if transition.configValue('addIcon') and transition.getConfigValue('icon') %}
-                    <img src="{{ transition.getConfigValue('icon') }}" width="14" height="14" alt="{{ transition.label }}">
-                {% endif %}
-                {{ transition.label }}
-            </a>
-        {% endfor %}
+{% for name, section in sections %}
+    <div class="workflow-section">
+    {% include sections.template(name) with section only %}
     </div>
-</div>
-
-<div class="maintenance_inactive">
-    <h2 class="sub_headline">{{ 'workflow.dataRecord'|trans }}</h2>
-    {{ view|raw }}
-</div>
-
-{% if history %}
-<div class="workflow-section">
-    <h2 class="sub_headline">{{ 'workflow.history'|trans }}</h2>
-    <div class="workflow-content-box">
-    {% include 'NetzmachtContaoWorkflowBundle:backend:state_history.html.twig' with { 'history': history } %}
-    </div>
-</div>
-
-{% endif %}
+{% endfor %}
 
 {% endblock %}
