--- a/src/Resources/public/css/backend.css
+++ b/src/Resources/public/css/backend.css
@@ -14,6 +14,10 @@
     margin-top: 4px;
 }
 
+.icon_selector .tl_help {
+    clear: both;
+}
+
 .workflow_state.row {
     clear: both;
     max-width: 600px;
