--- a/src/Resources/public/css/backend.css
+++ b/src/Resources/public/css/backend.css
@@ -56,6 +56,10 @@
     border-bottom: 1px solid #e9e9e9;
 }
 
+.workflow-history-state.transition-failed td {
+    color: #bbb;
+}
+
 .workflow-submit-container {
     padding: 8px 15px;
 }
