Support start and stop workflows in state

--- a/src/Resources/views/sections/history.html.twig
+++ b/src/Resources/views/sections/history.html.twig
@@ -37,6 +37,12 @@
     {% endif %}
 {% endblock %}
 
+{% block target %}
+    {% if value is defined %}
+        {{ value.step }} <span class="tl_gray">[{{ value.workflow }}]</span>
+    {% endif %}
+{% endblock %}
+
 {% block successful %}
     {% if value is defined %}{{ value.label }}{% endif %}
 {% endblock %}
