--- a/src/Resources/public/css/backend.css
+++ b/src/Resources/public/css/backend.css
@@ -1,3 +1,6 @@
+#tl_navigation .group-workflow {
+    background: url('../img/workflow-module.svg') 3px -1px no-repeat;
+}
 
 .icon_selector .selector_container img {
     max-width: 20px;
